src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AACR_Announcements__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>AACR Announcements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AACR_Foundation__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>AACR Foundation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AACR_ID__c</fullName>
        <description>Formula field reflecting either legacy iMIS ID or new Salesforce ID depending upon when record was created.</description>
        <formula>IF(ISBLANK( iMIS_ID__c ), Salesforce_ID__c, iMIS_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AACR ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Research_Areas__c</fullName>
        <description>This field reflects any additional research areas for the AACR member besides the primary area.</description>
        <inlineHelpText>This field reflects any additional research areas for the AACR member besides the primary area.</inlineHelpText>
        <label>Additional Research Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Research_Areas_Global_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advocacy_Focus__c</fullName>
        <label>Advocacy Focus</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocate_Biography__c</fullName>
        <description>Biographical verbiage of advocate to be used for speaking engagements and printed material, where applicable.</description>
        <inlineHelpText>Biographical verbiage of advocate to be used for speaking engagements and printed material, where applicable.</inlineHelpText>
        <label>Advocate Biography</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Advocate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies this individual as a member of the Survivor and Patient Advocacy program.</description>
        <inlineHelpText>Eligible for discounted patient advocate rate</inlineHelpText>
        <label>Advocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Meeting__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Annual Meeting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <description>Queue management field for the Membership Department.</description>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete Application</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Clarification</fullName>
                </value>
                <value>
                    <fullName>Former Applicant</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Awaiting Payment</fullName>
                </value>
                <value>
                    <fullName>Pending Transfer</fullName>
                </value>
                <value>
                    <fullName>Pending Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Pending Reinstatement-Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assistant_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who is the main assistant for this member?</description>
        <inlineHelpText>Who is the main assistant for this member?</inlineHelpText>
        <label>Assistant 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Assistant 1)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Awards_Grants__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Awards &amp; Grants</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bad_Journal_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returned Journal Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Mailing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returned Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Other_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Other Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blacklisted__c</fullName>
        <label>Blacklisted</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CEO_Preference__c</fullName>
        <label>CEO Preference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>Identifies contacts that will receive special consideration as related to a specific AACR campaign.</description>
        <inlineHelpText>Identifies contacts that will receive special consideration as related to a specific AACR campaign.</inlineHelpText>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancer_Immunology_Group__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Cancer Immunology Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancer_Policy_Advocacy__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Cancer Policy &amp; Advocacy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancer_Today_Magazine__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Cancer Today Magazine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chemistry_in_Cancer_Research__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Chemistry in Cancer Research</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Preferences__c</fullName>
        <formula>HYPERLINK(&quot;http://uat-aacr.cs195.force.com/DW_CommunicationPreferences&quot;, &quot;Edit&quot;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Update phone numbers, email addresses, and other preferences.</inlineHelpText>
        <label>Communication Preferences</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complimentary_Journal__c</fullName>
        <label>Complimentary Journal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Complimentary Journal</fullName>
                    <default>true</default>
                    <label>No Complimentary Journal</label>
                </value>
                <value>
                    <fullName>Cancer Discovery Journal</fullName>
                </value>
                <value>
                    <fullName>Cancer Epidemiology, Biomarkers &amp; Prevention</fullName>
                </value>
                <value>
                    <fullName>Cancer Immunology Research Journal</fullName>
                </value>
                <value>
                    <fullName>Cancer Prevention Research Journal</fullName>
                </value>
                <value>
                    <fullName>Cancer Research Journal</fullName>
                </value>
                <value>
                    <fullName>Clinical Cancer Research Journal</fullName>
                </value>
                <value>
                    <fullName>Molecular Cancer Research Journal</fullName>
                </value>
                <value>
                    <fullName>Molecular Cancer Therapeutics Journal</fullName>
                </value>
                <value>
                    <fullName>Cancer Discovery Journal - Print</fullName>
                    <isActive>false</isActive>
                    <label>Cancer Discovery Journal - Print</label>
                </value>
                <value>
                    <fullName>Cancer Epidemiology, Biomarkers &amp; Prevention - Print</fullName>
                    <isActive>false</isActive>
                    <label>Cancer Epidemiology, Biomarkers &amp; Prevention - Print</label>
                </value>
                <value>
                    <fullName>Cancer Immunology Research Journal - Print</fullName>
                    <isActive>false</isActive>
                    <label>Cancer Immunology Research Journal - Print</label>
                </value>
                <value>
                    <fullName>Cancer Prevention Research Journal - Print</fullName>
                    <isActive>false</isActive>
                    <label>Cancer Prevention Research Journal - Print</label>
                </value>
                <value>
                    <fullName>Cancer Research Journal - Print</fullName>
                    <isActive>false</isActive>
                    <label>Cancer Research Journal - Print</label>
                </value>
                <value>
                    <fullName>Cancer Today Magazine</fullName>
                    <isActive>false</isActive>
                    <label>Cancer Today Magazine</label>
                </value>
                <value>
                    <fullName>Cancer Today Magazine - Print</fullName>
                    <isActive>false</isActive>
                    <label>Cancer Today Magazine - Print</label>
                </value>
                <value>
                    <fullName>Clinical Cancer Research Journal - Print</fullName>
                    <isActive>false</isActive>
                    <label>Clinical Cancer Research Journal - Print</label>
                </value>
                <value>
                    <fullName>Molecular Cancer Research Journal - Print</fullName>
                    <isActive>false</isActive>
                    <label>Molecular Cancer Research Journal - Print</label>
                </value>
                <value>
                    <fullName>Molecular Cancer Therapeutics Journal - Print</fullName>
                    <isActive>false</isActive>
                    <label>Molecular Cancer Therapeutics Journal - Print</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conferences_Workshops__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Conferences &amp; Workshops</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>Provides the full Contact ID (18 digit) for reports, etc.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_StudentNominatorName__c</fullName>
        <label>Nominator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_StudentNominatorTitle__c</fullName>
        <label>Nominator Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_StudentNominatorType__c</fullName>
        <label>Nominator Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>AACR member</fullName>
                </value>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>Mentor</fullName>
                </value>
                <value>
                    <fullName>Principal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Education_Status__c</fullName>
        <description>What educational level does this individual currently have?</description>
        <inlineHelpText>What educational level does this individual currently have?</inlineHelpText>
        <label>Current Education Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Post-Baccalaureate</fullName>
                </value>
                <value>
                    <fullName>Graduate Student</fullName>
                </value>
                <value>
                    <fullName>Medical Student</fullName>
                </value>
                <value>
                    <fullName>Resident</fullName>
                </value>
                <value>
                    <fullName>Clinical Fellow</fullName>
                </value>
                <value>
                    <fullName>Postdoctoral Fellow</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DnBContactRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D&amp;B Contact ID for display of the correct custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D&amp;B Contact ID for display of the correct custom object with D&amp;B data.</inlineHelpText>
        <label>ContactToDnB</label>
        <referenceTo>DNBoptimizer__DnBContactRecord__c</referenceTo>
        <relationshipLabel>ContactToDnB</relationshipLabel>
        <relationshipName>ContactToDnB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DRCTS__Directory_Preferences__c</fullName>
        <description>The JSON is used to hide the fields on the directory detail view.</description>
        <inlineHelpText>The JSON is used to hide the fields on the directory detail view.</inlineHelpText>
        <label>Directory Preferences</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Death__c</fullName>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degrees_Held__c</fullName>
        <label>Degrees Held</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Degree</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AAS</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BAAS</fullName>
                </value>
                <value>
                    <fullName>BBA</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BDS</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>B Eng</fullName>
                </value>
                <value>
                    <fullName>BMBCh</fullName>
                </value>
                <value>
                    <fullName>BPS</fullName>
                </value>
                <value>
                    <fullName>B Pharm</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BSN</fullName>
                </value>
                <value>
                    <fullName>DDS</fullName>
                </value>
                <value>
                    <fullName>DMD</fullName>
                </value>
                <value>
                    <fullName>DMSc</fullName>
                </value>
                <value>
                    <fullName>DO</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>D Phil</fullName>
                </value>
                <value>
                    <fullName>DSc</fullName>
                </value>
                <value>
                    <fullName>DVM</fullName>
                </value>
                <value>
                    <fullName>Dr PH</fullName>
                </value>
                <value>
                    <fullName>Dr Rer Nat</fullName>
                </value>
                <value>
                    <fullName>Ed D</fullName>
                </value>
                <value>
                    <fullName>EdM</fullName>
                </value>
                <value>
                    <fullName>JD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dietary_Needs__c</fullName>
        <label>Dietary Needs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetic</fullName>
                </value>
                <value>
                    <fullName>Gluten Sensitivity</fullName>
                </value>
                <value>
                    <fullName>Halal</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>Nut Allergy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Shellfish Allergy</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DirectoryApi__Directory_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Declaration for the record to be removed from all directories.</description>
        <inlineHelpText>Declaration for the record to be removed from all directories.</inlineHelpText>
        <label>Directory Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <description>Identifies this individual as having a physical disability.</description>
        <inlineHelpText>Does this individual have a physical disability?</inlineHelpText>
        <label>Disability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blind or Visually Impaired</fullName>
                </value>
                <value>
                    <fullName>Deaf or Hearing Impaired</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Temporary Injury Effecting Mobility</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Display_in_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field as criteria in directory to not display contact record.  Does not automatically remove contact unless configured in directory.</description>
        <inlineHelpText>Use this field as criteria in directory to not display contact record.  Does not automatically remove contact unless configured in directory.</inlineHelpText>
        <label>Do Not Display in Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AACR created do not direct mail address field</description>
        <inlineHelpText>Do not send direct mail to this individual.</inlineHelpText>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Trade_Externally__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Legacy iMIS field migration</description>
        <label>Do Not Trade Externally</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Active_Recurring_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated Field** Indicates wether this contact has an active recurring gift opportunity.</description>
        <inlineHelpText>**System Calculated Field** Indicates wether this contact has an active recurring gift opportunity.</inlineHelpText>
        <label>Active Recurring Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Auto_Calculate_Contact_Greetings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default value for new contacts is true. When set to true the system will auto update the contact&apos;s personal greeting, personal recognition name, and formal greeting with the system default format. Personal = FirstName, Personal Recognition Name = Salutation FirstName LastName, Formal Greeting = Personal Recognition Name</description>
        <inlineHelpText>Default value for new contacts is true. When set to true the system will auto update the contact&apos;s personal greeting, personal recognition name, and formal greeting with the system default formats.</inlineHelpText>
        <label>Auto Calculate Contact Greetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Auto_Calculate_Current_Ask_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default value for new contacts is true. When set to true the system will auto update the contact&apos;s current ask amount with the amount of the contact&apos;s last gift if the last gift amount is greater than 0.</description>
        <inlineHelpText>Default value for new contacts is true. When set to true the system will auto update the contact&apos;s current ask amount with the amount of the contact&apos;s last gift if the last gift amount is greater than 0.</inlineHelpText>
        <label>Auto Calculate Current Ask Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Current_Ask_Amount__c</fullName>
        <description>What is the target current ask amount for this person?</description>
        <inlineHelpText>What is the target current ask amount for this person?</inlineHelpText>
        <label>Current Ask Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if the contact is deceased</description>
        <inlineHelpText>check if the contact is deceased</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Default_Greeting_Type__c</fullName>
        <description>*DO NOT CHANGE*</description>
        <inlineHelpText>*DO NOT CHANGE*</inlineHelpText>
        <label>Default Greeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Greeting</fullName>
                    <default>true</default>
                    <label>Personal Greeting</label>
                </value>
                <value>
                    <fullName>Formal Greeting</fullName>
                </value>
                <value>
                    <fullName>Personal Recognition Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorApi__Default_Greeting__c</fullName>
        <formula>IF(ISPICKVAL(DonorApi__Default_Greeting_Type__c,&quot;Personal Greeting&quot;), DonorApi__Personal_Greeting__c,
IF(ISPICKVAL(DonorApi__Default_Greeting_Type__c,&quot;Personal Recognition Name&quot;), DonorApi__Personal_Recognition_Name__c,
IF(ISPICKVAL(DonorApi__Default_Greeting_Type__c,&quot;Formal Greeting&quot;), DonorApi__Formal_Greeting__c,DonorApi__Personal_Greeting__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Greeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Direct_Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude this contact from all direct mail campaigns.</description>
        <inlineHelpText>Exclude this contact from all direct mail campaigns.</inlineHelpText>
        <label>Direct Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not solicit this contact. By default when flagged the contact will be excluded from all campaigns.</description>
        <inlineHelpText>Do not solicit this contact. By default when flagged the contact will be excluded from all campaigns.</inlineHelpText>
        <label>Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__First_Gift_Date__c</fullName>
        <description>**System Calculated Field** Calculates the first gift received date for all related gifts.</description>
        <inlineHelpText>**System Calculated Field** Calculates the first gift received date for all related gifts.</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Formal_Greeting__c</fullName>
        <description>Formal Greeting for the contact</description>
        <inlineHelpText>Formal Greeting for the contact</inlineHelpText>
        <label>Formal Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gift_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**System Calculated Field** Counts the total number of related gift opportunities (Sales Orders with type &quot;Gift Opportunity&quot;) -- for the contact.</description>
        <inlineHelpText>**System Calculated Field** Counts the total number of related gift opportunities (Sales Orders with type &quot;Gift Opportunity&quot;) -- for the contact.</inlineHelpText>
        <label>Gift Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gifts_Outstanding__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**System Calculated Field** Sum of the balance due for all outstanding pledges.</description>
        <inlineHelpText>**System Calculated Field** Sum of the balance due for all outstanding pledges.</inlineHelpText>
        <label>Gifts Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gifts_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <description>**System Calculated Field** Sum of hard credits.</description>
        <inlineHelpText>**System Calculated Field** Sum of hard credits.</inlineHelpText>
        <label>Gifts Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Gifts_Value__c</fullName>
        <formula>DonorApi__Gifts_Outstanding__c + DonorApi__Gifts_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gifts Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Include_in_Household_Greetings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, the contact will be included on all household greetings. This flag will automatically populate to true if the contact is the primary contact on a related account.</description>
        <inlineHelpText>If set to true, the contact will be included on all household greetings. This flag will automatically populate to true if the contact is the primary contact on a related account.</inlineHelpText>
        <label>Include in Household Greetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Languages__c</fullName>
        <description>Languages that the contact can speak.</description>
        <inlineHelpText>Languages that the contact can speak.</inlineHelpText>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Largest_Gift__c</fullName>
        <description>**System Calculated Field** Calculates the largest gift amount for all related gifts.</description>
        <inlineHelpText>**System Calculated Field** Calculates the largest gift amount for all related gifts.</inlineHelpText>
        <label>Largest Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>